2002-10-23  Adam Fedor  <fedor@gnu.org>

	* GormDocument.m (-createClassFiles:): Set default save file
	to className.

	* Palettes/2Controls/inspectors.m ([GormStepperAttributesInspector
	-_getValuesFromObject:]): Get increment value.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.1.9 snapshot.
	* Documentation/news.texi: Update.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* ClassInformation.plist: Added NSDocumentController and
	NSDocument methods to FirstResponder (openDocument,
	revertDocumentToSaved:, saveAllDocuments:, saveDocument:,
	saveDocumentAs:, saveDocumentTo:).

	* GormInspectorsManager.m (-setCurrentInspector:): Show empty
	inspector only when count = 0. If no inspector name is
	returned by object, show GormNotApplicableInspector.

	* GormMatrixEditor.m (-mouseDown:): Edit titles of forms, etc
	on double-click.

	* Palettes/0Menus/GormMenuEditor.m (-mouseDown:): Move variables
	to beginning of block for gcc 2.X

	* Palettes/0Menus/main.m (-finishInstantiate): Change actions
	to appropriate NSDocument methods.

	* Palettes/2Controls/inspectors.m ([NSStepper
	-sizeInspectorClassName]): Remove so normal size inspector is
	used.

	* Palettes/4Data/inspectors.m ([GormImageViewAttributesInspector
	-_setValuesFromControl:]): Show error panel if entered image file
	is not found (Needs proper image handling).

2002-10-13  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Implemented methods necessary to read the
	templates back from the gorm file and transform them
	back into the appropriate parent class.   Also made modifications
	to the template additions for NSWindowTemplate, and all other
	templates so that the correct init method is called.
	* GormClassManager.h: Added more methods to handle custom classes and
	cleaned up some of the references to "NSObject".  These should be
	"id" instead.
	* GormClassManager.m: Added implementations of the custom class
	methods.  Removed the old implementation for the 