@@ -1,3 +1,8 @@
+2002-10-25  Adam Fedor  <fedor@gnu.org>
+
+	* GormDocument.m (-dealloc): Release tempNameTable.
+	Change some NSLogs to NSDebugLogs.
+
 2002-10-23  Adam Fedor  <fedor@gnu.org>
 
 	* GormDocument.m (-createClassFiles:): Set default save file
